Fixed the issue
Therapeuten kunnen nu (Goed) alleen hun eigen patienten zien, ook na het
updaten.

Let op: hoewel het allemaal hoort te werken is de query jammer genoeg
niet volledig via hibernate gedaan, (restriction.eq) - Ik heb er
handmatig een query in gezet.