@@ -8,9 +8,12 @@ package com.dao;
 import com.model.Exercise;
 import com.model.PatientUser;
 import com.model.TherapistUser;
+import com.service.PatientService;
+import com.service.TherapistService;
 import java.util.List;
 import javax.servlet.http.HttpSession;
 import org.hibernate.Criteria;
+import org.hibernate.Query;
 import org.hibernate.Session;
 import org.hibernate.SessionFactory;
 import org.hibernate.criterion.Restrictions;
@@ -23,18 +26,33 @@ import org.springframework.stereotype.Repository;
  */
 @Repository
 public class PatientDao {
-
+    
     @Autowired
     private SessionFactory sessionFactory;
-
+    @Autowired
+    private TherapistService therapistService;
+    
     private Session getCurrentSession() {
         return sessionFactory.getCurrentSession();
     }
-
+    
     public void addPatient(PatientUser patient) {
         getCurrentSession().save(patient);
     }
-
+    
+    public void addPatient(PatientUser patient, TherapistUser therapist) {
+        
+        TherapistUser T = therapistService.getTherapist(therapist.getId());
+        if (!patient.getTherapists().contains(T)) {
+            List<TherapistUser> TherapistList;
+            TherapistList = patient.getTherapists();
+            TherapistList.add(T);
+            patient.setTherapists(TherapistList);
+        } else {
+        }
+        getCurrentSession().save(patient);
+    }
+    
     public void updatePatient(PatientUser patient) {
         PatientUser patientToUpdate = getPatient(patient.getId());
         patientToUpdate.setFirstName(patient.getFirstName());
@@ -49,50 +67,47 @@ public class PatientDao {
         patientToUpdate.setExcersises(patient.getExcersises());
         getCurrentSession().update(patientToUpdate);
     }
-
+    
     public PatientUser getPatient(long id) {
         PatientUser patient = (PatientUser) getCurrentSession().get(PatientUser.class, id);
         return patient;
     }
-
+    
     public void deletePatient(long id) {
         PatientUser patient = getPatient(id);
         if (patient != null) {
             getCurrentSession().delete(patient);
         }
     }
-
+    
     public void addExercises(long id, List<Exercise> exercises) {
-
+        
         PatientUser patient = getPatient(id);
-
+        
     }
-
+    
     @SuppressWarnings("unchecked")
     public List<PatientUser> getPatients() {
-
+        
         return getCurrentSession().createQuery("from PatientUser").list();
     }
-
-
+    
     public List<PatientUser> getPatientsFromTherapist(int TherapistID) {
-
-        List Patient = getCurrentSession().createCriteria(PatientUser.class)
-                .createAlias("Therapists", "t")
-                .add(Restrictions.eq("t.Patients", new Integer(TherapistID)))
-                .list();
-
-        System.out.println(Patient.get(0));
-        return Patient;
-
+        long TPID = Long.valueOf(TherapistID);
+        
+        Query query = getCurrentSession().createSQLQuery("SELECT * FROM User inner join Therapist_Patient on User.id = Therapist_Patient.Patient_ID and Therapist_ID = ?").addEntity(PatientUser.class);
+        List<PatientUser> Q = query.setInteger(0, TherapistID).list();
+        
+        return Q;
+        
     }
-
+    
     public void storeAllPatients(List<PatientUser> patients) {
-
+        
         for (PatientUser patient : patients) {
             getCurrentSession().save(patient);
         }
-
+        
     }
-
+    
 }
